@@ -34,9 +34,9 @@ import net.jcip.annotations.ThreadSafe
  * A cache for storing the active broker as known by the caller.
  **/
 @ThreadSafe
-open class ActiveBrokerCache
-    internal constructor(private val storage: INameValueStorage<String>,
-                         private val lock: Mutex) : IActiveBrokerCache {
+open class BaseActiveBrokerCache
+    (private val storage: INameValueStorage<String>,
+     private val lock: Mutex) : IActiveBrokerCache {
 
     companion object {
         /**
@@ -48,34 +48,6 @@ open class ActiveBrokerCache
          * Key of the broker signature hash in the cache.
          **/
         const val ACTIVE_BROKER_CACHE_SIGHASH_KEY = "ACTIVE_BROKER_CACHE_SIGHASH_KEY"
-
-        /**
-         * File name of [ActiveBrokerCache] used by the broker code.
-         **/
-        private const val BROKER_METADATA_CACHE_STORE_ON_BROKER_SIDE_STORAGE_NAME = "BROKER_METADATA_CACHE_STORE_ON_BROKER_SIDE"
-
-        /**
-         * The Mutex for all [ActiveBrokerCache] instances used by the broker code.
-         * (As of May 24, 2023... Kotlin has yet to officially support ReadWriteMutex.
-         *  I don't think it's worth implementing our own (for now).
-         *  If we eventually are seeing a perf hit, sure...)
-         **/
-        private val sBrokerSideLock = Mutex()
-
-        /**
-         * If the caller is the broker, invoke this function.
-         *
-         * @param storageSupplier an [IStorageSupplier] component.
-         * @return a thread-safe [IActiveBrokerCache].
-         * */
-        fun getBrokerMetadataStoreOnBrokerSide(storageSupplier: IStorageSupplier)
-            : IActiveBrokerCache {
-            return ActiveBrokerCache(
-                storage = storageSupplier.getEncryptedNameValueStore(
-                    BROKER_METADATA_CACHE_STORE_ON_BROKER_SIDE_STORAGE_NAME, String::class.java),
-                lock = sBrokerSideLock
-            )
-        }
     }
 
     /**
