@@ -1,5 +1,6 @@
 V.NEXT
 ----------
+- [MAJOR] Move Broker side active broker cache to broker repo (#2123)
 - [MINOR] Add span names for the BrokerOperationRequestDispatcher and PassthroughExecutor (#2100)
 - [PATCH] Add key derivation method that takes SecretKey object as argument (#2113)
 - [MAJOR] AccountManagerStorageHelper should not force cast IBrokerAccount into AndroidBrokerAccount (#2110) (Breaking change to Broker only)
